inclusao de redes neurais nas aulas

--- a/index.html
+++ b/index.html
@@ -59,8 +59,9 @@
         <a href="javascript:;" class="menu_item" data-toggle="collapse" data-target="#submenu_expressoes">Aplicações em Redes Neurais</a>
         <div class="collapse" id="submenu_expressoes" aria-expanded="false">
           <ul class="flex-column pl-2 nav">            
-            <li><a class="menu_subitem" href="javascript:;">Construção de Redes Neurais</a></li>
-            <li><a class="menu_subitem" href="javascript:;">Análise de Imagens</a></li>
+            <li><a class="menu_subitem" href="aula05/preprocessamento_de_imagens.slides.html">Pré-processamento de Imagens</a></li>            
+            <li><a class="menu_subitem" href="aula06/gradiente_descendente.slides.html">Construção de Redes Neurais</a></li>            
+            <li><a class="menu_subitem" href="aula07/">Análise de Imagens</a></li>
             <li><a class="menu_subitem" href="javascript:;">Análise de Dados Sequenciais</a></li>            
             <li><a class="menu_subitem" href="javascript:;">Análise de Textos</a></li>            
           </ul>
