--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
         <a href="javascript:;" class="menu_item" data-toggle="collapse" data-target="#submenu_expressoes">Análise de Dados Textuais</a>
         <div class="collapse" id="submenu_expressoes" aria-expanded="false">
           <ul class="flex-column pl-2 nav">            
-            <li><a class="menu_subitem" href="aula04/preprocessamento_de_textos.slides">Processamento de Linguagem Natural</a></li>
-            <li><a class="menu_subitem" href="aula04a/representacao_de_textos.slides">Representação de Textos</a></li>
+            <li><a class="menu_subitem" href="aula04/preprocessamento_de_textos.slides.html">Processamento de Linguagem Natural</a></li>
+            <li><a class="menu_subitem" href="aula04a/representacao_de_textos.slides.html">Representação de Textos</a></li>
             <!-- <li><a class="menu_subitem" href="javascript:;">Modelos para Classificação de Textos</a></li>  -->
           </ul>
         </div>
