--- a/aula04a/representacao_de_textos.slides.html
+++ b/aula04a/representacao_de_textos.slides.html
@@ -13113,7 +13113,7 @@ ul.typeahead-list  > li > a.pull-right {
 <style type="text/css">
 /* Overrides of notebook CSS for static HTML export */
 .reveal {
-  font-size: 160%;
+  font-size: 160%;  
 }
 .reveal pre {
   width: inherit;
@@ -13243,8 +13243,6 @@ a.anchor-link {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<link rel="stylesheet" href="ipython.min.css">
-
 <p><img src="img/logoifsc.png"></p>
 <hr>
 <p>Prof. Carlos Andrés Ferrero</p>
@@ -17166,18 +17164,23 @@ Melhor modelo -&gt; parâmetros:  {&#39;criterion&#39;: &#39;gini&#39;, &#39;max
 </div>
 </div>
 </div>
-<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
-</div><div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
-<p>random_forest_parameters = {
-        'n_estimators': list(np.arange(20, 51, 3)),<br>
-        'max_features': ['log2'],
-        'criterion':['gini']<br>
-    }
-cv = 10</p>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">random_forest_parameters</span> <span class="o">=</span> <span class="p">{</span>
+        <span class="s1">&#39;n_estimators&#39;</span><span class="p">:</span> <span class="nb">list</span><span class="p">(</span><span class="n">np</span><span class="o">.</span><span class="n">arange</span><span class="p">(</span><span class="mi">20</span><span class="p">,</span> <span class="mi">51</span><span class="p">,</span> <span class="mi">3</span><span class="p">)),</span>        
+        <span class="s1">&#39;max_features&#39;</span><span class="p">:</span> <span class="p">[</span><span class="s1">&#39;log2&#39;</span><span class="p">],</span>
+        <span class="s1">&#39;criterion&#39;</span><span class="p">:[</span><span class="s1">&#39;gini&#39;</span><span class="p">]</span>    
+    <span class="p">}</span>
+<span class="n">cv</span> <span class="o">=</span> <span class="mi">10</span>
+</pre></div>
 
+    </div>
 </div>
 </div>
+
 </div></section><section>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
