classificação de imagens e de dados sequenciais

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="collapse" id="submenu_expressoes" aria-expanded="false">
           <ul class="flex-column pl-2 nav">            
             <li><a class="menu_subitem" href="aula04/preprocessamento_de_textos.slides.html">Processamento de Linguagem Natural</a></li>
-            <li><a class="menu_subitem" href="aula04a/representacao_de_textos.slides.html">Representação de Textos</a></li>
+            <li><a class="menu_subitem" href="aula04a/representacao_de_textos.slides.html">Representação e Classificação de Textos</a></li>
             <!-- <li><a class="menu_subitem" href="javascript:;">Modelos para Classificação de Textos</a></li>  -->
           </ul>
         </div>
@@ -61,8 +61,8 @@
           <ul class="flex-column pl-2 nav">            
             <li><a class="menu_subitem" href="aula05/preprocessamento_de_imagens.slides.html">Pré-processamento de Imagens</a></li>            
             <li><a class="menu_subitem" href="aula07/redes_neurais_classificacao.slides.html">Construção de Redes Neurais</a></li>
-            <li><a class="menu_subitem" href="aula07/">Análise de Imagens</a></li>
-            <li><a class="menu_subitem" href="javascript:;">Análise de Dados Sequenciais</a></li>            
+            <li><a class="menu_subitem" href="aula08/redes_neurais_classificacao_imagens.slides.html">Análise e Classificação de Imagens</a></li>
+            <li><a class="menu_subitem" href="aula09/redes_neurais_regressão_sequencias.slides.html">Análise de Dados Sequenciais</a></li>            
             <li><a class="menu_subitem" href="javascript:;">Análise de Textos</a></li>            
           </ul>
         </div>
