--- a/index.html
+++ b/index.html
@@ -38,17 +38,18 @@
           <a href="#" class="menu_item">Dashboard</a>
           <a href="#" class="menu_item">Shortcuts</a>
         -->        
-        <a href="javascript:;" class="menu_item" data-toggle="collapse" data-target="#submenu_variaveis">Introdução</a>
-        <div class="collapse" id="submenu_variaveis" aria-expanded="false">
+        <a href="javascript:;" class="menu_item" data-toggle="collapse" data-target="#submenu_introducao">Introdução</a>
+        <div class="collapse" id="submenu_introducao" aria-expanded="false">
           <ul class="flex-column pl-2 nav">
             <!-- <li><a class="menu_subitem" href="#">Entrada e saída de dados</a></li> -->
+            <li><a class="menu_subitem" href="aula01/introducao_disciplina.slides.html">Introdução à Disciplina</a></li>
             <li><a class="menu_subitem" href="aula02/introducao_aprendizado.slides.html">Conceitos de Aprendizado de Máquina</a></li>
             <li><a class="menu_subitem" href="aula03/visualizacao_dados.slides.html">Visualização de Dados</a></li>
           </ul>
         </div>        
         
-        <a href="javascript:;" class="menu_item" data-toggle="collapse" data-target="#submenu_expressoes">Análise de Dados Textuais</a>
-        <div class="collapse" id="submenu_expressoes" aria-expanded="false">
+        <a href="javascript:;" class="menu_item" data-toggle="collapse" data-target="#submenu_analise_texto">Análise de Dados Textuais</a>
+        <div class="collapse" id="submenu_analise_texto" aria-expanded="false">
           <ul class="flex-column pl-2 nav">            
             <li><a class="menu_subitem" href="aula04/preprocessamento_de_textos.slides.html">Processamento de Linguagem Natural</a></li>
             <li><a class="menu_subitem" href="aula04a/representacao_de_textos.slides.html">Representação e Classificação de Textos</a></li>
@@ -56,8 +57,8 @@
           </ul>
         </div>
 
-        <a href="javascript:;" class="menu_item" data-toggle="collapse" data-target="#submenu_expressoes">Aplicações em Redes Neurais</a>
-        <div class="collapse" id="submenu_expressoes" aria-expanded="false">
+        <a href="javascript:;" class="menu_item" data-toggle="collapse" data-target="#submenu_redes_neurais">Aplicações em Redes Neurais</a>
+        <div class="collapse" id="submenu_redes_neurais" aria-expanded="false">
           <ul class="flex-column pl-2 nav">            
             <li><a class="menu_subitem" href="aula05/preprocessamento_de_imagens.slides.html">Pré-processamento de Imagens</a></li>            
             <li><a class="menu_subitem" href="aula07/redes_neurais_classificacao.slides.html">Construção de Redes Neurais</a></li>
