alteração do tamanho de letra

--- a/aula01/introducao_disciplina.slides.html
+++ b/aula01/introducao_disciplina.slides.html
@@ -14532,8 +14532,8 @@ require(
             progress: true,
             history: true,
             transition: "slide",
-            width=1200,
-            center=true,
+            width:1200,
+            center:true,
         });
 
         var update = function(event){
